# mulfile

./: LICENSE  LICENSE.rst  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
mulfile/: __init__.py  gwyddion.py  mul.py
tests/: test_mulfile.py
tests/test_files/: test_flm.flm  test_single_image.gwy  test_single_image.mul
