[tool.poetry]
name = "mulfile"
version = "0.2.0"
description = "Python library to read .mul and .flm files"
authors = ["Matthias Krinninger <matkrin@protonmail.com>"]
license = "BSD-3-Clause"
homepage = "https://github.com/matkrin/mulfile"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
include = ["mulfile/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 79
preview = true

[tool.mypy]
show_error_codes = true
