[metadata]
name = mulfile
version = 0.1.0
url = https://github.com/matkrin/mulfile
license = BSD-3-Clause
license_files = LICENSE.rst
author = Matthias Krinninger
author_email = matkrin@protonmail.com
description = Python library to read .mul and .flm files
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = mulfile
python_requires = >= 3.7
